--- a/projeto1/acertou.html
+++ b/projeto1/acertou.html
@@ -5,7 +5,7 @@
 	</head>
 	<body bgcolor="LightGreen">
 		<center>
-			<h1>Parabens</h1>
+			<h1 color="yellow">Parabens</h1>
 			<br/>
 			<p>Voce acertou, HTML5 nao e considerado uma linguagem de programacao, mas sim uma linguagem de formatacao</p>
 			<br />
