--- a/aula5/home.html
+++ b/aula5/home.html
@@ -11,7 +11,9 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+
 	<link rel="stylesheet" type="text/css" href="resources/css/home.css">
+	<link rel="stylesheet" type="text/css" href="resources/css/menu.css" />
 </head>
 <body>
 	<ul class="menu">
@@ -27,9 +29,22 @@
 		</li>
 		<li>
 			<i class="fa fa-comment" aria-hidden="true"></i> Mensagens
+			<div class="box_mensagem">
+				<ul class="list_mensagem">
+					<li>
+						<b>Ana Cecilia:</b> Ola, voce consegue me confirmar o dia que nao ira vir ao trabalho?
+					</li>
+					<li>
+						<b>Paulo Cesar:</b> Suas horas deste mes estao corretas ?
+					</li>
+					<li>
+						<b>Heitor Santos:</b> Voce vai vir na festa junina da empresa este sabado?
+					</li>
+				</ul>
+			</div>
 		</li>
-		<li>
-			<a href="index.html" class="btn btn-vermelho">
+		<li class="btn-vermelho">
+			<a href="index.html">
 				<i class="fa fa-sign-out" aria-hidden="true"></i> Sair
 			</a>
 		</li>
