--- a/aula7/index.html
+++ b/aula7/index.html
@@ -56,7 +56,30 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-					<!-- Slider de banner do site -->
+					<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="3000">
+						<ol class="carousel-indicators">
+							<li data-target="#carouselExampleSlidesOnly" data-slide-to="0" class="active"></li>
+							<li data-target="#carouselExampleSlidesOnly" data-slide-to="1"></li>
+							<li data-target="#carouselExampleSlidesOnly" data-slide-to="2"></li>
+						</ol>
+					  	<div class="carousel-inner">
+					    	<div class="carousel-item active">
+					     		<img class="d-block w-100" src="assets/img/banner1.webp" alt="First slide">
+					    	</div>
+					    	<div class="carousel-item">
+					    		<img class="d-block w-100" src="assets/img/banner2.jpg" alt="Second slide">
+					    	</div>
+					    	<div class="carousel-item">
+					    		<img class="d-block w-100" src="assets/img/banner3.jpg" alt="Third slide">
+					    	</div>
+					  	</div>
+					  	<a class="carousel-control-prev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
+					  		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					  	</a>
+					  	<a class="carousel-control-next" href="#carouselExampleSlidesOnly" role="button" data-slide="next">
+					  		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					  	</a>
+					</div>
 				</div>
 				<div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 					<form method="post" action="#">
@@ -75,13 +98,13 @@
 						</div>
 						<div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
 					  		<div class="form-group">
-						    	<input type="email" class="form-control" id="inputCPF" aria-describedby="cnhHelp" placeholder="Digite sua CNH">
+						    	<input type="email" class="form-control" id="inputCNH" aria-describedby="cnhHelp" placeholder="Digite sua CNH">
 						    	<small id="cnhHelp" class="form-text text-muted">Digite o numero da CNH</small>
 						  	</div>
 						</div>
 						<div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
 						  	<div class="form-group">
-						    	<input type="date" class="form-control" id="inputDtNascimento" aria-describedby="valCnh" placeholder="DD/MM/YYYY">
+						    	<input type="date" class="form-control" id="validadeCNH" aria-describedby="valCnh" placeholder="DD/MM/YYYY">
 						    	<small id="valCnh" class="form-text text-muted">Validade CNH</small>
 						  	</div>
 						</div>
@@ -94,6 +117,11 @@
 					</form>
 				</div>
 			</div>
+
+			<section class="recovery">
+				<h2>Esteja sempre atualizado com a sua pontuacao da CNH</h2>
+				<button class="btn btn-outline-dark">Assine Ja</button>
+			</section>
 
 			<div class="row">
 				<div class="col-12 col-sm-12 col-md-6 col-lg-8 col-xl-8">
